Closed
Bug 451506
Opened 17 years ago
Closed 17 years ago
The return values of PR_Seek64 and PR_Available64 should be checked in FileImpl::Seek or else file corruption will occur
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: hiro, Assigned: hiro)
Details
(Keywords: dataloss, fixed1.8.1.18)
Attachments
(1 file)
|
1.48 KB,
patch
|
benjamin
:
review+
neil
:
superreview+
dveditz
:
approval1.8.1.18+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.15) Gecko/20080702 Ubuntu/8.04 (hardy) Firefox/2.0.0.15 Kazehakase/0.5.4
Build Identifier:
The return values of PR_Seek64 and PR_Available64 should be checked in FileImpl::Seek or else file corruption will occur.
When call Seek(NS_SEEK_END, 0), if PR_Available64 fails then fileSize become wrong value. So file pointer does not move to end of file.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
| Assignee | ||
Comment 1•17 years ago
|
||
Attachment #334836 -
Flags: superreview?(neil)
Attachment #334836 -
Flags: review?(neil)
| Assignee | ||
Comment 2•17 years ago
|
||
I suspect BUG 432514 was caused by this issue.
Comment 3•17 years ago
|
||
Comment on attachment 334836 [details] [diff] [review]
Check both values
[Checkin: Comment 9]
You need an XPCOM reviewer for this.
Attachment #334836 -
Flags: review?(neil) → review?(benjamin)
Comment 4•17 years ago
|
||
Comment on attachment 334836 [details] [diff] [review]
Check both values
[Checkin: Comment 9]
r=me, although this code really just needs to die
Attachment #334836 -
Flags: review?(benjamin) → review+
Updated•17 years ago
|
Attachment #334836 -
Flags: superreview?(neil) → superreview+
| Assignee | ||
Comment 5•17 years ago
|
||
I agree. But Thunderbird 2.0.0.x still uses this code. I don't think that cleanup XPCOM/obsolete codes from Thunderbird is good for its stability.
| Assignee | ||
Comment 6•17 years ago
|
||
Comment on attachment 334836 [details] [diff] [review]
Check both values
[Checkin: Comment 9]
the patch will raise stability.
Attachment #334836 -
Flags: approval1.8.1.17?
Comment 7•17 years ago
|
||
Comment on attachment 334836 [details] [diff] [review]
Check both values
[Checkin: Comment 9]
This will have to get looked at in 1.8.1.18. We're frozen.
Attachment #334836 -
Flags: approval1.8.1.17? → approval1.8.1.18?
Updated•17 years ago
|
Comment 8•17 years ago
|
||
Comment on attachment 334836 [details] [diff] [review]
Check both values
[Checkin: Comment 9]
Approved for 1.8.1.18, a=dveditz for release-drivers
Attachment #334836 -
Flags: approval1.8.1.18? → approval1.8.1.18+
Updated•17 years ago
|
Assignee: nobody → poincare
Comment 9•17 years ago
|
||
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Target Milestone: --- → mozilla1.9.1b1
| Assignee | ||
Updated•17 years ago
|
Whiteboard: [checkin-needed: 1.8 branch]
Target Milestone: mozilla1.9.1b1 → ---
Updated•17 years ago
|
Attachment #334836 -
Attachment description: Check both values. → Check both values
[Checkin: Comment 9]
Comment 10•17 years ago
|
||
Patch checked into the 1.8 branch
Keywords: checkin-needed → fixed1.8.1.18
Whiteboard: [checkin-needed: 1.8 branch]
You need to log in
before you can comment on or make changes to this bug.
Description
•