Bug 451506 - "The return values of PR_Seek64 and PR_Available64 should be checked in  FileImpl::Seek or else file corruption will occur" [r=benjamin sr=neil a=dveditz]